--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "administracion-de-ventas-fontend",
 	"private": true,
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -16,7 +16,8 @@
 		"axios": "^1.4.0",
 		"framer-motion": "^10.12.16",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "6.14.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
